--- a/.emdaer.yml
+++ b/.emdaer.yml
@@ -8,6 +8,12 @@
       - alt: 'Travis'
         image: 'travis/flipactual/fuzzy-proxy.svg'
         link: 'https://travis-ci.org/flipactual/fuzzy-proxy/'
+      - alt: 'Node'
+        image: 'node/v/fuzzy-proxy.svg'
+        link: 'http://npmjs.com/package/fuzzy-proxy'
+      - alt: 'NPM'
+        image: 'npm/v/fuzzy-proxy.svg'
+        link: 'http://npmjs.com/package/fuzzy-proxy'
 - text: 'Creates an object with fuzzy matching capabilities.'
 - include: './docs/scripts.md'
 - jsdoc: 'index.js'
