--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuzzy-proxy",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Creates an object with fuzzy matching capabilities.",
   "repository": "flipactual/fuzzy-proxy",
   "license": "MIT",
@@ -30,5 +30,8 @@
     "eslint-plugin-ava": "^3.0.0",
     "eslint-plugin-import": "^1.14.0",
     "nyc": "^8.1.0"
+  },
+  "ava": {
+    "verbose": true
   }
 }
