--- a/.emdaer.yml
+++ b/.emdaer.yml
@@ -8,6 +8,9 @@
       - alt: 'Travis'
         image: 'travis/flipactual/fuzzy-proxy.svg'
         link: 'https://travis-ci.org/flipactual/fuzzy-proxy/'
+      - alt: 'Codecov'
+        image: 'codecov/c/github/flipactual/fuzzy-proxy.svg'
+        link: 'https://codecov.io/gh/flipactual/fuzzy-proxy/'
       - alt: 'Node'
         image: 'node/v/fuzzy-proxy.svg'
         link: 'http://npmjs.com/package/fuzzy-proxy'
