--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fuzzy-proxy",
-  "version": "0.0.3",
-  "description": "Creates an object with fuzzy matching capabilities.",
+  "version": "0.0.5",
+  "description": "Fuzzy match keys on objects",
   "repository": "flipactual/fuzzy-proxy",
   "license": "MIT",
   "author": {
