--- a/.emdaer.yml
+++ b/.emdaer.yml
@@ -19,5 +19,5 @@
         link: 'http://npmjs.com/package/fuzzy-proxy'
 - text: 'Fuzzy match keys on objects'
 - include: './docs/scripts.md'
-- jsdoc: 'index.js'
+- jsdoc: './src/index.js'
 - license: true
