--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuzzy-proxy",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Fuzzy match keys on objects",
   "repository": "flipactual/fuzzy-proxy",
   "license": "MIT",
@@ -15,8 +15,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "nyc ava",
-    "coverage": "nyc report --reporter=html ava && open ./coverage/index.html",
-    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "coverage": "nyc --reporter=html ava && open ./coverage/index.html",
+    "codecov": "nyc --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "eslint .",
     "readme": "emdaer",
     "compile": "babel src -d lib",
@@ -35,7 +35,7 @@
     "eslint-config-airbnb-base": "^5.0.3",
     "eslint-plugin-ava": "^3.0.0",
     "eslint-plugin-import": "^1.14.0",
-    "nyc": "^8.1.0"
+    "nyc": "^10.0.0"
   },
   "ava": {
     "verbose": true
